[gd_scene load_steps=13 format=3 uid="uid://bhap26c2aki1h"]

[ext_resource type="Script" path="res://Scripts/Gimmick/Gimmick_Hole.gd" id="1_srm68"]
[ext_resource type="PackedScene" uid="uid://dxdviw06naroy" path="res://Gimmicks/WindHole/Mesh_Gimmick_Windhole.glb" id="3_a0sbt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_55kbm"]

[sub_resource type="Shader" id="Shader_1fsw1"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.3.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_burley, specular_schlick_ggx;

uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color, filter_linear_mipmap, repeat_enable;
uniform float point_size : hint_range(0.1, 128.0, 0.1);

uniform float roughness : hint_range(0.0, 1.0);
uniform sampler2D texture_metallic : hint_default_white, filter_linear_mipmap, repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r, filter_linear_mipmap, repeat_enable;

uniform float specular : hint_range(0.0, 1.0, 0.01);
uniform float metallic : hint_range(0.0, 1.0, 0.01);

uniform sampler2D texture_emission : source_color, hint_default_black, filter_linear_mipmap, repeat_enable;
uniform vec4 emission : source_color;
uniform float emission_energy : hint_range(0.0, 100.0, 0.01);

uniform float is_active: hint_range(0.0, 1.0, 0.01);

uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

void vertex() {
	UV = UV * uv1_scale.xy + uv1_offset.xy;
}

void fragment() {
	vec2 base_uv = UV;

	vec4 albedo_tex = texture(texture_albedo, base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb * is_active;

	float metallic_tex = dot(texture(texture_metallic, base_uv), metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	SPECULAR = specular;

	vec4 roughness_texture_channel = vec4(1.0, 0.0, 0.0, 0.0);
	float roughness_tex = dot(texture(texture_roughness, base_uv), roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;

	// Emission: Enabled
	vec3 emission_tex = texture(texture_emission, base_uv).rgb;
	vec3 target_emission = (emission.rgb + emission_tex) * emission_energy;
	// Emission Operator: Add
	EMISSION = target_emission * is_active;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4dhe6"]
render_priority = 0
shader = SubResource("Shader_1fsw1")
shader_parameter/albedo = Color(0, 1, 0.9, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/emission = Color(0, 1, 0.9, 1)
shader_parameter/emission_energy = 1.5
shader_parameter/is_active = 1.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kg7fi"]
animation = &"BlowWind"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vxw57"]
animation = &"RESET"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xobt1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4igok"]
advance_mode = 2
advance_condition = &"is_blowing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m8pnr"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3ps7y"]
states/BlowWind/node = SubResource("AnimationNodeAnimation_kg7fi")
states/BlowWind/position = Vector2(581.333, 121.407)
states/RESET/node = SubResource("AnimationNodeAnimation_vxw57")
states/RESET/position = Vector2(358, 120.667)
states/Start/position = Vector2(199.333, 119.778)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_xobt1"), "RESET", "BlowWind", SubResource("AnimationNodeStateMachineTransition_4igok"), "BlowWind", "RESET", SubResource("AnimationNodeStateMachineTransition_m8pnr")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_7qloy"]
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_3ps7y")
nodes/StateMachine/position = Vector2(0, 0)
nodes/output/position = Vector2(333.333, 40)
node_connections = [&"output", 0, &"StateMachine"]

[node name="Gimmick_Windhole" type="Node3D" groups=["gimmick"]]
script = ExtResource("1_srm68")

[node name="Area3D" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_55kbm")

[node name="Mesh_Gimmick_Windhole" parent="." instance=ExtResource("3_a0sbt")]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0)

[node name="Skeleton3D" parent="Mesh_Gimmick_Windhole/Armature" index="0"]
bones/1/rotation = Quaternion(0.509347, -0.500525, -0.4993, -0.490652)
bones/2/rotation = Quaternion(0.509347, 0.500525, 0.4993, -0.490652)

[node name="Cylinder" parent="Mesh_Gimmick_Windhole/Armature/Skeleton3D" index="0"]
surface_material_override/1 = SubResource("ShaderMaterial_4dhe6")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Mesh_Gimmick_Windhole")
tree_root = SubResource("AnimationNodeBlendTree_7qloy")
anim_player = NodePath("../Mesh_Gimmick_Windhole/AnimationPlayer")
parameters/StateMachine/conditions/is_blowing = false
parameters/StateMachine/conditions/is_idle = false

[node name="GPUParticles3D" type="GPUParticles3D" parent="AnimationTree"]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]

[editable path="Mesh_Gimmick_Windhole"]
